[package]
name = "falconre"
version = "0.1.0"
authors = ["endeavor <endeavor@rainbowsandpwnies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon = "0.5.4"
falcon-raptor = "0.5.2"
falcon-finch = "0.5.2"
rayon = "1.3"
serde_json = "1.0"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[lib]
name = "falconre"
crate-type = ["cdylib"]

[features]
capstone4 = ["falcon/capstone4", "falcon-raptor/capstone4", "falcon-finch/capstone4"]